# trm-sudoku-agi-model

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  knexfile.js  main.py  package-lock.json  package.json  pyproject.toml  server.js
configs/: default.yaml
migrations/: 20211224144906_articles_table.js  20211224145626_tips_table.js  20211224150228_writeups_table.js  20211224150404_ctfs_table.js
outputs/: config.json  eval_results.json  history.json  llm_comparison.json
scripts/: __init__.py  compare_llm.py  evaluate.py  train.py  visualize.py  visualize_comparison.py
src/: __init__.py  routes.js
src/common/: getClientByJwtToken.js  getUserByJwtToken.js  logger.js  validators.js  verifyTwoFa.js
src/controllers/: article.js  blogController.js  bookmarkController.js  ctf.js  email.js  forumController.js  general.js  qaController.js  searchController.js  tip.js  twoFaController.js  userController.js  voteController.js  writeup.js
src/data/: __init__.py  augmentation.py  dataset.py
src/evaluation/: __init__.py  llm_comparison.py  metrics.py
src/exceptions/: apiError.js
src/knex/: knex.js
src/middlewares/: auth.js  basicAuth.js  errorHandler.js  validator.js
src/model/: __init__.py  layers.py  trm.py
src/repositories/: blogRepository.js  bookmarkRepository.js  forumRepository.js  jwtRepository.js  postTypeRepository.js  qaRepository.js  userRepository.js  voteRepository.js
src/routes/: index.js
src/services/: articleService.js  blogService.js  bookmarkService.js  cryptoService.js  ctfService.js  emailService.js  (+9 more)
(+37 files in other folders)
